goapp/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  namespace: gcpug
  labels:
    app: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: gcr.io/[PROJECT_ID]/gcpug-go:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
