goapp/manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: go-app-service
  namespace: gcpug
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: go-app
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8080
